[package]
name = "schwab-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client for the Charles Schwab API"
license = "MIT"
repository = "https://github.com/yourname/schwab-api-rust"
keywords = ["finance", "trading", "api", "schwab", "stocks"]
categories = ["api-bindings", "finance"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket for streaming
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.21"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# URL encoding
url = "2.4"

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"

# Futures utilities
futures-util = "0.3"

# TLS
rustls = "0.21"
rustls-pemfile = "1.0"

# Environment variables
dotenv = "0.15"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
env_logger = "0.10"